<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".defectEditor">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_overview"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Project Name field -->
            <EditText
                android:id="@+id/edit_project_location"
                android:hint="@string/hint_project_location"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_client_name"
                android:hint="@string/hint_client_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

            <!-- Contact field -->
            <EditText
                android:id="@+id/edit_client_contact"
                android:hint="@string/hint_client_contact"
                android:inputType="phone"
                style="@style/EditorFieldStyle" />
        </LinearLayout>
    </LinearLayout>

    <!-- ProjectType category -->
    <LinearLayout
        android:id="@+id/container_projectType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_projectType"
            style="@style/CategoryStyle" />

        <!-- Input field -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <!-- Gender drop-down spinner -->
            <Spinner
                android:id="@+id/spinner_projectType"
                android:layout_height="48dp"
                android:layout_width="wrap_content"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown"/>
        </LinearLayout>
    </LinearLayout>
    <!-- Manager category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_assignedTo"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- ProjectManager Name field -->
            <EditText
                android:id="@+id/edit_project_manager"
                android:hint="@string/project_manager_hint"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

            <!-- Date-->
            <TextView
                android:id="@+id/starts_on"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="Date"/>
            <TextView
                android:id="@+id/edit_project_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="Select a date"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:padding="5dp">

        <ImageView
            android:id="@+id/project_img"
            android:layout_width="300dp"
            android:layout_height="250dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/ic_launcher_background" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/floatingActionButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            app:srcCompat="@android:drawable/ic_menu_camera" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_descriptions_of_defect_s"
            style="@style/CategoryStyle" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Project Name field -->
            <EditText
                android:id="@+id/defect_1"
                android:hint="@string/defect_1"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

            <!-- Name field -->
            <EditText
                android:id="@+id/defect_2"
                android:hint="@string/defect_2"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

            <!-- Contact field -->
            <EditText
                android:id="@+id/defect_3"
                android:hint="@string/defect_3"
                android:inputType="text"
                style="@style/EditorFieldStyle" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <!-- Label -->
        <TextView
            android:text="@string/pending_comments"
            style="@style/CategoryStyle" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="1dp">
        <!-- Weight field -->
        <EditText
            android:id="@+id/pending_comment"
            android:hint="@string/Pending_comment"
            android:inputType="textMultiLine"
            style="@style/EditorFieldStyle" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>

</ScrollView>