<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:orientation="horizontal">
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/project_location"
        android:id="@+id/project_location"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
        android:text="@string/pennding_date"
        android:id="@+id/project_date"
        android:textColor="@color/colorText"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/project_person"
            android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Client"/>
        <TextView
            android:id="@+id/project_number"
            android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Number"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher_round"
            android:id="@+id/project_image"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="6dp"
        android:layout_marginStart="5dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/project_manager_text" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/project_manager"
                    android:id="@+id/project_manager"
                    android:paddingLeft="6dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/project_id"
                    android:visibility="invisible"/>
            </TableRow>
        </TableLayout>
            <TableLayout
                android:layout_marginTop="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/defect_1_text" />
                    <TextView
                        android:paddingLeft="6dp"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:text="@string/none"
                        android:id="@+id/project_defect_1" />
                </TableRow>
            </TableLayout>
            <TableLayout
                android:layout_marginTop="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/defect_2_text" />
                    <TextView
                        android:paddingLeft="6dp"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:text="@string/none"
                        android:id="@+id/project_defect_2" />
                </TableRow>
            </TableLayout>
            <TableLayout
                android:layout_marginTop="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/defect_3_text" />
                    <TextView
                        android:paddingLeft="6dp"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:text="@string/none"
                        android:id="@+id/project_defect_3" />
                </TableRow>
            </TableLayout>
    </LinearLayout>
</LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="6dp">
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/comments_text" />
                    <TextView
                        android:paddingLeft="6dp"
                        android:layout_width="280dp"
                        android:layout_height="wrap_content"
                        android:text="@string/none"
                        android:id="@+id/project_comment" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
</LinearLayout>